--- a/study-ex/app/sass/global/base.scss
+++ b/study-ex/app/sass/global/base.scss
@@ -1,5 +1,5 @@
 html {
-  // scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -21,7 +21,6 @@ body {
 
 ::-webkit-scrollbar-track {
   background: #fff;
-  // border: 1px solid #e1e1e1;
 }
 
 ::-webkit-scrollbar-thumb {
