--- a/study-ex/app/sass/blocks/table.scss
+++ b/study-ex/app/sass/blocks/table.scss
@@ -1,5 +1,6 @@
 .table__wrapper {
-  margin: 0 0 50px 0;
+  position: relative;
+  margin: 0 0 100px 0;
   background: #fff;
 }
 
@@ -35,8 +36,19 @@
 }
 
 .table {
+  position: absolute;
+  top: 43px;
+  left: 0;
   width: 100%;
+  background: #fff;
   border-collapse: collapse;
+  transition: 0.5s;
+  
+  &--hide {
+    left: -100px;
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .table__td {
