--- a/study-ex/app/sass/blocks/table.scss
+++ b/study-ex/app/sass/blocks/table.scss
@@ -85,7 +85,11 @@
   }
 }
 
+@media screen and ($tablet-widths) {}
 
-
-
-
+@media screen and ($mobile-widths) {
+  .table {
+    display: block;
+    overflow: scroll;
+  }
+}
