--- a/study-ex/app/sass/blocks/programs.scss
+++ b/study-ex/app/sass/blocks/programs.scss
@@ -15,7 +15,7 @@
 .programs__item {
   box-sizing: border-box;
   width: 370px;
-  margin: 0 0 40px 0;
+  margin: 0 auto 40px auto;
   padding: 10px 25px 35px 25px;
   box-shadow: 0px 18px 16px 0px rgba(225, 228, 231, 0.6);
   background: #fff;
