--- a/study-ex/app/sass/blocks/register.scss
+++ b/study-ex/app/sass/blocks/register.scss
@@ -20,3 +20,11 @@
   font-weight: normal;
   text-align: center;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .register__wrapper {
+    width: auto;
+  }
+}
