--- a/study-ex/app/sass/blocks/title.scss
+++ b/study-ex/app/sass/blocks/title.scss
@@ -44,9 +44,10 @@
   
   .title__text {
     font-size: 16px;
+    text-align: center;
     
     &:first-child {
-      padding: 0;
+      padding: 0 0 30px 0;
       border-right: none;
       border-bottom: 2px solid $main-red;
     }
