--- a/study-ex/app/sass/blocks/waiting.scss
+++ b/study-ex/app/sass/blocks/waiting.scss
@@ -56,3 +56,28 @@
   font-size: 16px;
   font-style: italic;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .waiting {
+    background: url('../img/waiting-bg.png') no-repeat right / cover;
+  }
+  
+  .waiting__content {
+    width: auto;
+  }
+  
+  .waiting__subheading {
+    font-size: 18px;
+    text-align: center;
+  }
+  
+  .waiting__attention {
+    text-align: center;
+  }
+  
+  .waiting__button {
+    margin: auto;
+  }
+}
