--- a/study-ex/app/sass/blocks/table.scss
+++ b/study-ex/app/sass/blocks/table.scss
@@ -1,6 +1,7 @@
 .table__wrapper {
   position: relative;
-  margin: 0 0 100px 0;
+  height: 820px;
+  margin: 0 0 30px 0;
   background: #fff;
 }
 
@@ -51,9 +52,21 @@
   }
 }
 
+.table__tr {
+  transition: 0.3s;
+  
+  &:hover {
+    background: #ebebeb;
+  }
+}
+
 .table__td {
   padding: 10px;
   border-bottom: 1px solid #dedede;
+  
+  &:nth-child(4) {
+    width: 130px;
+  }
 }
 
 .table__name {
