--- a/study-ex/app/sass/blocks/popup.scss
+++ b/study-ex/app/sass/blocks/popup.scss
@@ -8,11 +8,12 @@
   box-shadow: 0px 35px 50px 12px rgba(1, 26, 76, 0.4);
   background: #fff;
   transition: 0.3s;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   z-index: 3;
   
   &--hide {
     opacity: 0;
+    transform: translate(-50%, -50%) scale(0.7);
     visibility: hidden;
   }
 }
