--- a/study-ex/app/sass/blocks/members.scss
+++ b/study-ex/app/sass/blocks/members.scss
@@ -70,6 +70,7 @@
 
 @media screen and ($mobile-widths) {
   .members {
+    padding: 100px 0;
     background: url('../img/members-bg.png') no-repeat right / cover;
   }
   
