--- a/study-ex/app/sass/blocks/address.scss
+++ b/study-ex/app/sass/blocks/address.scss
@@ -6,6 +6,11 @@
   position: relative;
 }
 
+.address__map {
+  width: 100%;
+  height: 650px;
+}
+
 .address__img {
   width: 100%;
 }
@@ -31,4 +36,12 @@
   color: #414141;
   font-size: 24px;
   font-weight: normal;
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .address__content {
+    display: none;
+  }
 }
