--- a/study-ex/app/sass/blocks/programs.scss
+++ b/study-ex/app/sass/blocks/programs.scss
@@ -49,3 +49,11 @@
   font-weight: normal;
   text-align: center;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .programs__heading {
+    font-size: 30px;
+  }
+}
