--- a/study-ex/app/sass/blocks/title.scss
+++ b/study-ex/app/sass/blocks/title.scss
@@ -31,7 +31,8 @@
 
 @media screen and ($mobile-widths) {
   .title {
-    background: #fff;
+    padding: 150px 0 50px 0;
+    background: #fff url('../img/title-bg-mobile.jpg') no-repeat center / cover;
   }
   
   .title__wrapper {
@@ -47,13 +48,15 @@
     text-align: center;
     
     &:first-child {
-      padding: 0 0 30px 0;
+      margin: 0;
+      padding: 0 0 20px 0;
       border-right: none;
       border-bottom: 2px solid $main-red;
     }
     
     &:last-child {
-      padding: 0;
+      margin: 0;
+      padding: 20px 0 0 0;
     }
   }
 }
