--- a/study-ex/app/sass/blocks/waiting.scss
+++ b/study-ex/app/sass/blocks/waiting.scss
@@ -61,6 +61,7 @@
 
 @media screen and ($mobile-widths) {
   .waiting {
+    padding: 50px 0 100px 0;
     background: url('../img/waiting-bg.png') no-repeat right / cover;
   }
   
