--- a/study-ex/app/sass/blocks/nav.scss
+++ b/study-ex/app/sass/blocks/nav.scss
@@ -75,6 +75,10 @@
     padding: 20px 0;
   }
   
+  .nav__logo {
+    margin: 0 30px 0 0;
+  }
+  
   .nav__link {
     border: none;
     font-size: 14px;
