--- a/study-ex/app/sass/blocks/table.scss
+++ b/study-ex/app/sass/blocks/table.scss
@@ -51,6 +51,11 @@
     opacity: 0;
     visibility: hidden;
   }
+  
+  &--partner {
+    position: static;
+    margin: 0 0 60px 0;
+  }
 }
 
 .table__tr {
@@ -59,6 +64,17 @@
   &:hover {
     background: #ebebeb;
   }
+}
+
+.table__th {
+  padding: 10px 0;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+  background: #e13939;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .table__td {
