--- a/study-ex/app/sass/blocks/waiting.scss
+++ b/study-ex/app/sass/blocks/waiting.scss
@@ -57,12 +57,15 @@
   font-style: italic;
 }
 
-@media screen and ($tablet-widths) {}
+@media screen and ($tablet-widths) {
+  .waiting {
+    background: url('../img/waiting-bg.png') no-repeat right / cover;
+  }
+}
 
 @media screen and ($mobile-widths) {
   .waiting {
     padding: 50px 0 100px 0;
-    background: url('../img/waiting-bg.png') no-repeat right / cover;
   }
   
   .waiting__content {
