--- a/study-ex/app/sass/blocks/title.scss
+++ b/study-ex/app/sass/blocks/title.scss
@@ -4,7 +4,7 @@
   
   &--partner {
     padding: 230px 0;
-    background: url('../img/title-bg-partner.png') no-repeat 100px 0 / contain;
+    background: #fff;
   }
 }
 
@@ -12,7 +12,18 @@
   width: 760px;
   
   &--partner {
+    position: relative;
     margin: 0 0 0 auto;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -630px;
+      width: 605px;
+      height: 777px;
+      background: url('../img/title-bg-partner.png') no-repeat center / cover;
+    }
   }
 }
 
@@ -50,6 +61,10 @@
   .title {
     padding: 150px 0 50px 0;
     background: #fff url('../img/title-bg-mobile.jpg') no-repeat center / cover;
+    
+    &--partner {
+      background: #fff;
+    }
   }
   
   .title__wrapper {
