--- a/study-ex/app/sass/blocks/participants.scss
+++ b/study-ex/app/sass/blocks/participants.scss
@@ -7,6 +7,10 @@
   margin: 0 0 10px 0;
 }
 
+.participants__button {
+  margin: 0 auto 100px auto;
+}
+
 @media screen and ($mobile-widths) {
   .participants {
     background: url('../img/participants-bg.png') no-repeat left / cover;
