--- a/forexglobal/app/sass/style.scss
+++ b/forexglobal/app/sass/style.scss
@@ -6,6 +6,7 @@
 @import 'blocks/main/title';
 @import 'blocks/main/header';
 @import 'blocks/main/nav';
+@import 'blocks/main/button';
 @import 'blocks/main/slider';
 @import 'blocks/main/edge';
 @import 'blocks/main/account';
