--- a/forexglobal/app/sass/blocks/main/edge.scss
+++ b/forexglobal/app/sass/blocks/main/edge.scss
@@ -1,33 +1,38 @@
 .edge {
   padding: 40px 0;
-  background: #0c194f url('../img/edge-bg.jpg') no-repeat top;
+  background-color: #0c194f;
+  background-image: url('../img/edge-bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
 }
 
-.edge__flex {
+.edge__list {
   display: flex;
   justify-content: space-between;
-  padding: 0 15px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .edge__box {
   width: 170px;
   text-align: center;
-  
-  b {
-    display: inline-block;
-    padding: 0 0 9px 0;
-    color: #fff;
-    font-size: 30px;
-    font-weight: 500;
-    border-bottom: 1px solid $mc;
-  }
-  
-  p {
-    margin: 10px 0 0 0;
-    color: #fff;
-    font-weight: 300;
-  }
+}
+
+.edge__count {
+  display: inline-block;
+  padding: 0 0 10px 0;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 500;
+  border-bottom: 1px solid $mc;
+}
+
+.edge__text {
+  margin: 10px 0 0 0;
+  color: #fff;
+  font-weight: 300;
 }
 
 @media screen and ($tablet-widths) {}
