--- a/forexglobal/app/sass/global/fonts.scss
+++ b/forexglobal/app/sass/global/fonts.scss
@@ -1,20 +1,20 @@
-@font-face {
-  font-family: 'SF UI Display';
-  src: local('SF UI Display Thin'), local('SFUIDisplay-Thin'),
-    url('../fonts/SFUIDisplay-Thin.woff2') format('woff2'),
-    url('../fonts/SFUIDisplay-Thin.woff') format('woff');
-  font-weight: 100;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'SF UI Display';
+//   src: local('SF UI Display Thin'), local('SFUIDisplay-Thin'),
+//     url('../fonts/SFUIDisplay-Thin.woff2') format('woff2'),
+//     url('../fonts/SFUIDisplay-Thin.woff') format('woff');
+//   font-weight: 100;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'SF UI Display';
-  src: local('SF UI Display Ultralight'), local('SFUIDisplay-Ultralight'),
-    url('../fonts/SFUIDisplay-Ultralight.woff2') format('woff2'),
-    url('../fonts/SFUIDisplay-Ultralight.woff') format('woff');
-  font-weight: 200;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'SF UI Display';
+//   src: local('SF UI Display Ultralight'), local('SFUIDisplay-Ultralight'),
+//     url('../fonts/SFUIDisplay-Ultralight.woff2') format('woff2'),
+//     url('../fonts/SFUIDisplay-Ultralight.woff') format('woff');
+//   font-weight: 200;
+//   font-style: normal;
+// }
 
 @font-face {
   font-family: 'SF UI Display';
@@ -61,20 +61,20 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'SF UI Display';
-  src: local('SF UI Display Heavy'), local('SFUIDisplay-Heavy'),
-    url('../fonts/SFUIDisplay-Heavy.woff2') format('woff2'),
-    url('../fonts/SFUIDisplay-Heavy.woff') format('woff');
-  font-weight: 800;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'SF UI Display';
+//   src: local('SF UI Display Heavy'), local('SFUIDisplay-Heavy'),
+//     url('../fonts/SFUIDisplay-Heavy.woff2') format('woff2'),
+//     url('../fonts/SFUIDisplay-Heavy.woff') format('woff');
+//   font-weight: 800;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'SF UI Display';
-  src: local('SF UI Display Black'), local('SFUIDisplay-Black'),
-    url('../fonts/SFUIDisplay-Black.woff2') format('woff2'),
-    url('../fonts/SFUIDisplay-Black.woff') format('woff');
-  font-weight: 900;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'SF UI Display';
+//   src: local('SF UI Display Black'), local('SFUIDisplay-Black'),
+//     url('../fonts/SFUIDisplay-Black.woff2') format('woff2'),
+//     url('../fonts/SFUIDisplay-Black.woff') format('woff');
+//   font-weight: 900;
+//   font-style: normal;
+// }
