--- a/forexglobal/app/sass/style.scss
+++ b/forexglobal/app/sass/style.scss
@@ -6,11 +6,10 @@
 @import 'blocks/main/title';
 @import 'blocks/main/header';
 @import 'blocks/main/nav';
-@import 'blocks/main/button';
 @import 'blocks/main/slider';
 @import 'blocks/main/edge';
 @import 'blocks/main/account';
-@import 'blocks/main/tabs';
+@import 'blocks/main/tab';
 @import 'blocks/main/license';
 @import 'blocks/main/quote';
 @import 'blocks/main/form';
@@ -18,7 +17,7 @@
 @import 'blocks/main/footer';
 
 @import 'blocks/inner/account-types';
-@import 'blocks/inner/tab';
+// @import 'blocks/inner/tab';
 @import 'blocks/inner/announcements';
 @import 'blocks/inner/contact';
 @import 'blocks/inner/glossary';
