add some styles

--- a/diva/app/sass/blocks/title.scss
+++ b/diva/app/sass/blocks/title.scss
@@ -8,6 +8,7 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
 }
 
 .title__list {
