--- a/diva/app/sass/blocks/header.scss
+++ b/diva/app/sass/blocks/header.scss
@@ -1,9 +1,12 @@
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
   padding: 15px 0;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
-  background: #000;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1;
 }
 
 @media screen and ($tablet-widths) {}
