--- a/diva/app/sass/blocks/master.scss
+++ b/diva/app/sass/blocks/master.scss
@@ -1,11 +1,13 @@
 .master {
-  padding: 100px 0;
+  padding: 200px 0 250px 0;
   background-color: #fff;
   background-image: url('../img/master-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  // clip-path: polygon(0 20%, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0% 100%);
 }
 
 .master__list {
