--- a/diva/app/sass/style.scss
+++ b/diva/app/sass/style.scss
@@ -10,4 +10,7 @@
 @import 'blocks/nav';
 @import 'blocks/services';
 @import 'blocks/master';
+@import 'blocks/gallery';
 @import 'blocks/footer';
+
+@import 'blocks/popup';
