--- a/diva/app/sass/blocks/header.scss
+++ b/diva/app/sass/blocks/header.scss
@@ -4,8 +4,9 @@
   left: 0;
   width: 100%;
   padding: 15px 0;
-  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
-  background: rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.5);
+  // background: rgba(0, 0, 0, 0.8);
+  background: rgba(255, 255, 255, 0.9);
   z-index: 1;
 }
 
