--- a/diva/app/sass/blocks/nav.scss
+++ b/diva/app/sass/blocks/nav.scss
@@ -17,7 +17,8 @@
 }
 
 .nav__link {
-  color: #fff;
+  // color: #fff;
+  color: #000;
   font-size: 16px;
   font-weight: bold;
   text-decoration: none;
@@ -46,10 +47,6 @@
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
-  .nav__logo {
-
-  }
-  
   .nav__list {
     position: fixed;
     top: 0;
@@ -58,7 +55,8 @@
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-color: #000;
+    // background-color: #000;
+    background-color: #fff;
     transition: 0.2s;
     
     &--hide {
