--- a/diva/app/sass/blocks/nav.scss
+++ b/diva/app/sass/blocks/nav.scss
@@ -1,10 +1,10 @@
 .nav {
-  @include display-flex;
-  justify-content: space-between;
+  // margin: 0 0 0 auto;
 }
 
 .nav__list {
   @include display-flex;
+  justify-content: flex-end;
   @include clear-list;
 }
 
@@ -34,6 +34,7 @@
   display: none;
   width: 30px;
   height: 40px;
+  margin: 0 0 0 auto;
   font-size: 0;
   border: none;
   background-color: transparent;
