--- a/study-summer/app/sass/style.scss
+++ b/study-summer/app/sass/style.scss
@@ -8,3 +8,8 @@
 @import 'blocks/slider';
 @import 'blocks/about';
 @import 'blocks/gallery';
+@import 'blocks/features';
+@import 'blocks/advantages';
+@import 'blocks/programs';
+@import 'blocks/leaders';
+@import 'blocks/geography';
