--- a/study-summer/app/sass/blocks/gallery.scss
+++ b/study-summer/app/sass/blocks/gallery.scss
@@ -1,3 +1,7 @@
+.gallery {
+  margin-bottom: 70px;
+}
+
 .gallery__call {
   display: block;
   margin-bottom: 40px;
@@ -12,4 +16,47 @@
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.gallery__item {
+  overflow: hidden;
+  
+  &:nth-child(1) {
+    width: 50%;
+  }
+  
+  &:nth-child(2) {
+    width: 25%;
+  }
+  
+  &:nth-child(3) {
+    width: 25%;
+  }
+  
+  &:nth-child(4) {
+    width: 15%;
+    // margin-top: -4px;
+  }
+  
+  &:nth-child(5) {
+    width: 35%;
+    // margin-top: -4px;
+  }
+  
+  &:nth-child(6) {
+    width: 50%;
+    // margin-top: -4px;
+  }
+}
+
+.gallery__img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  transition: 0.3s;
+  
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
+  }
 }
