--- a/study-summer/app/sass/blocks/slider.scss
+++ b/study-summer/app/sass/blocks/slider.scss
@@ -63,7 +63,7 @@
   padding-left: 60px;
   color: #fff;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: 500;
   text-decoration: none;
   border-radius: 43px;
   background-color: $red;
