--- a/study-summer/app/sass/global/base.scss
+++ b/study-summer/app/sass/global/base.scss
@@ -15,22 +15,22 @@ body {
   padding: 0 15px;
 }
 
-// ::-webkit-scrollbar {
-//   width: 10px;
-// }
-// 
-// ::-webkit-scrollbar-track {
-//   background: #fff;
-// }
-// 
-// ::-webkit-scrollbar-thumb {
-//   border-radius: 20px;
-//   background: $main-red; 
-// }
-// 
-// ::-webkit-scrollbar-thumb:hover {
-//   background: darken($main-red, 5%); 
-// }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background: $red; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: darken($red, 5%); 
+}
 
 @media screen and ($tablet-widths) {
   .container {
